--- a/src/views/login.html
+++ b/src/views/login.html
@@ -38,11 +38,19 @@
                         </div>
 
                     </div>
-                    <a href="#" class="btn btn-primary">Log in</a>
+                    <button onclick="login()" class="btn btn-primary">Log in</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
+<script>
+    function login() {
+        let topDocument = window.top.document;
+        let body = topDocument.getElementById("body");
+        console.log(body);
+    }
+</script>
 
 </html>
