--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -7,9 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../styles/principal.css">
 </head>
 
 <body>
+
+    <div class="wrapper">
+        <nav id="sidebar" class="bg-dark menu">
+            <div class="sidebar-header">
+                <h3>Terminal V.M.V</h3>
+            </div>
+
+            <ul class="list-unstyled components">
+                <li class="active">
+                    <a href="#"><i class="fas fa-info-circle fa-1x sidebar-icons"></i>We</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-car fa-1x sidebar-icons"></i>Vehicle companies</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-road fa-1x sidebar-icons"></i>Routes</a>
+
+                </li>
+
+            </ul>
+
+            <div class="footer">
+                <p><b>Copyright</b> 2021 Valentina M.</p>
+                <p>Mateo A. Valentina C.</p>
+            </div>
+        </nav>
+
+    </div>
 
 </body>
 
