--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -19,7 +19,7 @@
                 <h3>Terminal V.M.V</h3>
             </div>
 
-            <ul class="list-unstyled components">
+            <ul class="list-unstyled components link">
                 <li class="active">
                     <a href="#"><i class="fas fa-info-circle fa-1x sidebar-icons"></i>We</a>
                 </li>
