--- a/src/views/login.html
+++ b/src/views/login.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!--seguridad en el contenido: no se ejecuta si el contenido ha sido modificado-->
     <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
+    <!--para usar los estilos con permiso¿?¡'???-->
     <link rel="stylesheet" href="../styles/login.css">
 </head>
 
@@ -23,6 +25,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
                                     <i class="fas fa-user-circle fa-2x"></i>
+                                    <!--etiqueta para tipo de fuente-->
                                 </span>
                             </div>
                             <input type="text" class="form-control" placeholder="Username" id="username">
