sparkles: view we

--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -9,6 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/principal.css">
+    
 </head>
 
 <body>
@@ -38,7 +39,37 @@
                 <p>Mateo A. Valentina C.</p>
             </div>
         </nav>
-
+        <div id="view" class="container-view">
+            <div class="background-header">
+                <div class="blurring">
+                   <h2>We</h2>
+                </div>
+            </div>
+            <div class="container-text">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa est mollitia, optio possimus saepe voluptas, sapiente voluptate laboriosam eligendi ab perferendis repudiandae! At deleniti nesciunt dignissimos tempora ea nostrum tenetur nihil nemo explicabo, quis possimus placeat, numquam facere non vitae eum doloremque velit natus neque maxime. Quasi rerum eligendi soluta possimus suscipit nihil dolor voluptate optio. Eveniet soluta molestiae, non quas labore ipsa obcaecati minima repudiandae nisi cumque iusto laboriosam sit nostrum animi quidem fuga nihil reiciendis delectus itaque. Voluptas beatae ea odit ipsam dolore, inventore quod, numquam exercitationem neque laboriosam molestias cum consequuntur quidem perspiciatis impedit. Non, laborum nulla.
+                </p>
+            </div>
+            <div class="container-contact d-flex flex-column">
+                <div class="item-center">
+                    <h3>Contact Us</h3>
+                </div>
+                <div class="item-center">
+                    <ul class="list-unstyled"> <!--crea una lista no ordenada-->
+                        <li>
+                            Email: terminalvmv@gmail.com
+                        </li>
+                        <li>
+                            Phone: +57 604 455 35 00
+                        </li>
+                        <li>
+                            Address: Cra 67 #8b-109    
+                        </li>
+        
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
