--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Noto+Sans+Display:ital,wght@1,300&display=swap');
 
+h2 {
+    color: #ffff;
+    text-align: center; 
+    width: 100%;
+    padding-top: 60px;
+    font-size: 50px;
+}
+
 .wrapper {
     display: flex;
     width: 100%;
@@ -61,4 +69,43 @@
 .footer p {
     margin: 2px;
     font-size: 14px;
+}
+
+.background-header {
+    width: 100%;
+    height: 30%;
+    background-image: url(../sources/redBus.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.container-view {
+    margin: 0px;
+    padding: 0px;
+    width: calc(100vw - 218px);
+    height: 100vh !important;
+}
+
+.blurring {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    z-index: 0;
+    background-color: rgba(0, 10, 29, 0.7);
+}
+
+.container-text {
+    text-align: justify;
+    padding: 50px 100px;
+    font-size: 20px;
+}
+
+.container-contact {
+    align-items: center;
+    justify-content: center;
+}
+
+.item-center {
+    margin: auto;
+    padding-top: 10px;
 }
