:bug: error import css file

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
     <!--para usar los estilos con permiso¿?¡'???-->
     <link rel="stylesheet" href="../styles/login.css">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body class="login">
