--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/principal.css">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
