--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -138,3 +138,13 @@ td {
 .pagination li a:hover {
     color: rgb(52, 58, 64);
 }
+
+@media (max-height: 910px) { /*escuchador de eventos*/
+    .background-header {
+        height: 20%;
+    }
+
+    .text-table {
+        font-size: 14px;
+    }
+}
