--- a/src/styles/principal.css
+++ b/src/styles/principal.css
@@ -142,7 +142,16 @@ input[type=number]::-webkit-outer-spin-button {
     color: rgb(52, 58, 64);
 }
 
-@media (max-height: 910px) { /*escuchador de eventos*/
+.selected,
+.accept {
+    background-color: rgb(228, 128, 35);
+}
+
+.accept:hover {
+    background-color: rgb(224, 135, 52);
+}
+
+@media (max-height: 910px) { /* escuchador de eventos */
     .background-header {
         height: 20%;
     }
