--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -7,11 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6bdd16e88d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/principal.css">
     <link rel="stylesheet" href="../styles/main.css">
     <script src="../api/vehicle.js"></script>
     <script src="../api/route.js"></script>
+    <script src="../api/reservation.js"></script>
 </head>
 
 <body>
@@ -48,33 +55,100 @@
 </body>
 
 <script>
-    function getTableRoutes(page) {
-        let routes = getRoutes("", "", "");
+    function createTableReservation(routes) {
+        let allRoutes = JSON.parse(localStorage.getItem("routes"));
+        let tableBody = "";
+        for (let i = 0; i < routes.length; i++) {
+            tableBody += '<tr>';
+            for (let j = 0; j < allRoutes.length; j++) {
+                if (allRoutes[j].id === routes[i].route_by_vehicle_id) {
+                    tableBody += `<td>${routes[i].date.slice(0,-6)}</td>`;
+                    tableBody += `<td>${allRoutes[j].driver_name}</td>`;
+                    tableBody += `<td>${allRoutes[j].origin}</td>`;
+                    tableBody += `<td>${allRoutes[j].destination}</td>`;
+                    break;
+                }
+                
+            }
+            tableBody += '</tr>';
+        }
+        return tableBody;
+    }
+
+    async function getreservesRoute() {
+        let body = document.getElementById("body-modal-2");
+        let routes = await getReservation();
+        let tableBody = createTableReservation(routes);
+
+        body.innerHTML = ` \
+            <table class="table table-dark table-hover table-bordered text-center text-table"> \
+                <thead> \
+                    <tr> \
+                        <th scope="col">Date</th> \
+                        <th scope="col">Driver</th> \
+                        <th scope="col">Origin</th> \
+                        <th scope="col">Destination</th> \
+                    </tr> \
+                </thead> \
+                <tbody id="table"> \
+                    ${tableBody} \
+                </tbody> \
+            </table>`
+    }
+
+    async function reserveRoute() {
+        let rowSelected = document.getElementsByClassName("selected")[0];
+        let date = document.getElementById("date").value;
+        if (rowSelected === undefined || date === "") {
+            return
+        }
+
+        let id = rowSelected.getElementsByTagName("td")[0].innerHTML;
+
+        await createReservation(id, date);
+        document.getElementById("body-modal").innerHTML = ' \
+        <div class="alert alert-success" role="alert"> \
+            Successful reserve \
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"> \
+                <span aria-hidden="true">&times;</span> \
+            </button> \
+        </div>' + document.getElementById("body-modal").innerHTML;
+    }
+
+    async function getTableRoutes(page) {
+        let price = document.getElementById("price-filter").value;
+        let origin = document.getElementById("origin-filter").value;
+        let destination = document.getElementById("destination-filter").value;
+
+        let routes = await getRoutes(price, origin, destination);
         let tableBody = createTableRoutes(routes, page);
         return tableBody;
     }
 
-    function getTableVehicleCompanies(page) {
-        let vehicleCompanies = getVehicleCompanies("", "", "");
+    async function getTableVehicleCompanies(page) {
+        let driver = document.getElementById("driver-filter").value;
+        let origin = document.getElementById("origin-filter").value;
+        let destination = document.getElementById("destination-filter").value;
+
+        let vehicleCompanies = await getVehicleCompanies(driver, origin, destination);
         let tableBody = createTableVehicleCompanies(vehicleCompanies, page);
         return tableBody;
     }
 
-    function changeTable(page, view) {
+    async function changeTable(page, view) {
         let tableBody;
-        console.log(view);
         if (view === "routes") {
-            tableBody = getTableRoutes(page);
+            tableBody = await getTableRoutes(page);
         } else {
-            tableBody = getTableVehicleCompanies(page);
+            tableBody = await getTableVehicleCompanies(page);
         }
-        
+
         let table = document.getElementById("table");
         table.innerHTML = tableBody;
 
         document.getElementsByClassName("pagination")[0]
-                .getElementsByClassName("active")[0]
-                .classList.remove("active");
+            .getElementsByClassName("active")[0]
+            .classList.remove("active");
         document.getElementById(page.toString()).classList.add("active");
     }
 
@@ -83,12 +157,21 @@
 
         let items = page * 7;
         for (let i = items - 7; i < items; i++) {
-            tableBody += "<tr>";
+            tableBody += '<tr onclick="selectRow(this)">';
             for (let key in routes[i]) {
                 tableBody += `<td>${routes[i][key]}</td>`;
             }
+            tableBody += '</tr>';
         }
         return tableBody;
+    }
+
+    function selectRow(row) {
+        let rowSelected = document.getElementsByClassName("selected")[0];
+        if (rowSelected !== undefined) {
+            rowSelected.classList.remove("selected");
+        }
+        row.classList.add("selected");
     }
 
     function createTableVehicleCompanies(vehicleCompanies, page) {
@@ -96,7 +179,7 @@
 
         let items = page * 4;
         for (let i = items - 4; i < items; i++) {
-            tableBody += "<tr>";
+            tableBody += '<tr>';
             for (let key in vehicleCompanies[i]) {
                 tableBody += "<td>";
                 if (key == "route") {
@@ -118,7 +201,7 @@
         let pagination = "";
         let i;
         let number;
-        console.log(viewName);
+
         for (i = maxRow; i <= length; i += maxRow) {
             number = i / maxRow;
             if (page == i / maxRow) {
@@ -139,13 +222,13 @@
         return pagination;
     }
 
-    function showVehicle() {
+    async function showVehicle() {
         let view = document.getElementById("view");
         let row = document.getElementById("vehicle");
         document.getElementById("we").classList.remove("active");
         document.getElementById("routes").classList.remove("active");
 
-        let vehicleCompanies = getVehicleCompanies("", "", "");
+        let vehicleCompanies = await getVehicleCompanies("", "", "");
         let paginationNumbers = getPaginationNumbers(vehicleCompanies.length, 1, "vehicle", 4);
         let tableBody = createTableVehicleCompanies(vehicleCompanies, 1);
 
@@ -157,10 +240,10 @@
                 </div> \
             </div> \
             <div class="d-flex justify-content-between container-table mt-3"> \
-                <input type="text" class="form-control bg-secondary text-white" placeholder="Drive Name" aria-label="Drive Name"> \
-                <input type="text" class="form-control bg-secondary text-white" placeholder="Origin" aria-label="Origin"> \
-                <input type="text" class="form-control bg-secondary text-white" placeholder="Destination" aria-label="Destination"> \
-                <button type="button" class="btn btn-outline-dark">Search</button> \
+                <input id="driver-filter" type="text" class="form-control bg-secondary text-white" placeholder="Drive Name" aria-label="Drive Name"> \
+                <input id="origin-filter" type="text" class="form-control bg-secondary text-white" placeholder="Origin" aria-label="Origin"> \
+                <input id="destination-filter" type="text" class="form-control bg-secondary text-white" placeholder="Destination" aria-label="Destination"> \
+                <button onclick="changeTable(1, 'vehicle')" type="button" class="btn btn-outline-dark">Search</button> \
             </div> \
             <div class="table-responsive-md container-table shadow-lg bg-body rounded"> \
                 <table class="table table-dark table-hover table-bordered text-center text-table"> \
@@ -185,13 +268,13 @@
             </div>`;
     }
 
-    function showRoutes() {
+    async function showRoutes() {
         let view = document.getElementById("view");
         let row = document.getElementById("routes");
         document.getElementById("we").classList.remove("active");
         document.getElementById("vehicle").classList.remove("active");
-        
-        let routes = getRoutes("", "", "");
+
+        let routes = await getRoutes("", "", "");
         let paginationNumbers = getPaginationNumbers(routes.length, 1, "routes", 7);
         let tableBody = createTableRoutes(routes, 1);
 
@@ -203,15 +286,16 @@
                 </div> \
             </div> \
             <div class="d-flex justify-content-between container-table mt-3"> \
-                <input type="number" min="0" class="form-control bg-secondary text-white" placeholder="Price" aria-label="Price"> \
-                <input type="text" class="form-control bg-secondary text-white" placeholder="Origin" aria-label="Origin"> \
-                <input type="text" class="form-control bg-secondary text-white" placeholder="Destination" aria-label="Destination"> \
-                <button type="button" class="btn btn-outline-dark">Search</button> \
+                <input id="price-filter" type="number" min="0" class="form-control bg-secondary text-white" placeholder="Price" aria-label="Price"> \
+                <input id="origin-filter" type="text" class="form-control bg-secondary text-white" placeholder="Origin" aria-label="Origin"> \
+                <input id="destination-filter" type="text" class="form-control bg-secondary text-white" placeholder="Destination" aria-label="Destination"> \
+                <button onclick="changeTable(1, 'routes')" type="button" class="btn btn-outline-dark">Search</button> \
             </div> \
             <div class="table-responsive-md container-table shadow-lg bg-body rounded"> \
                 <table class="table table-dark table-hover table-bordered text-center text-table"> \
                     <thead> \
                         <tr> \
+                            <th scope="col">ID</th> \
                             <th scope="col">Company</th> \
                             <th scope="col">Driver</th> \
                             <th scope="col">Origin</th> \
@@ -232,9 +316,49 @@
                     </ul> \
                 </nav> \
             </div> \
+            <div class="modal fade" id="reservation" tabindex="-1" aria-labelledby="reservationLabel" \
+                aria-hidden="true"> \
+                <div class="modal-dialog modal-dialog-centered"> \
+                    <div class="modal-content"> \
+                        <div class="modal-header bg-dark p-2"> \
+                            <h5 class="modal-title" id="reservationLabel" style="color: #ffff;">Selecte Date</h5> \
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"> \
+                                <span aria-hidden="true">&times;</span> \
+                            </button> \
+                        </div> \
+                        <div id="body-modal" class="modal-body p-5"> \
+                            <div class="d-flex justify-content-center"> \
+                                <input type="datetime-local" name="date" id="date"> \
+                            </div> \
+                        </div> \
+                        <div class="modal-footer bg-dark p-1"> \
+                            <button type="button" class="btn btn-light" data-dismiss="modal">Close</button> \
+                            <button onclick="reserveRoute()" type="button" class="btn accept">Accept</button> \
+                        </div> \
+                    </div> \
+                </div> \
+            </div> \
+            <div class="modal fade" id="searchReserve" tabindex="-1" aria-labelledby="searchReserveLabel" \
+                aria-hidden="true"> \
+                <div class="modal-dialog modal-lg modal-dialog-scrollable"> \
+                    <div class="modal-content"> \
+                        <div class="modal-header bg-dark p-2"> \
+                            <h5 class="modal-title" id="searchReserveLabel" style="color: #ffff;">Reservations</h5> \
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"> \
+                                <span aria-hidden="true">&times;</span> \
+                            </button> \
+                        </div> \
+                        <div id="body-modal-2" class="modal-body p-5"> \
+                        </div> \
+                        <div class="modal-footer bg-dark p-1"> \
+                            <button type="button" class="btn btn-light" data-dismiss="modal">Close</button> \
+                        </div> \
+                    </div> \
+                </div> \
+            </div> \
             <div class="container-table d-flex justify-content-between"> \
-                <button type="button" class="btn btn-outline-dark">Reserve</button> \
-                <button type="button" class="btn btn-outline-dark">Search</button> \
+                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#reservation">Reserve</button> \
+                <button onclick="getreservesRoute()" type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#searchReserve">Consult reservations</button> \
             </div>`;
     }
 
@@ -285,7 +409,7 @@
             </div>';
     }
 
-    showWe();
+    // showWe();
 </script>
 
 </html>
