:sparkles: text we

--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -378,14 +378,15 @@
             </div> \
             <div class="container-text"> \
                 <p> \
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa est mollitia, optio possimus saepe \
-                    voluptas, sapiente voluptate laboriosam eligendi ab perferendis repudiandae! At deleniti nesciunt \
-                    dignissimos tempora ea nostrum tenetur nihil nemo explicabo, quis possimus placeat, numquam facere \
-                    non vitae eum doloremque velit natus neque maxime. Quasi rerum eligendi soluta possimus suscipit \
-                    nihil dolor voluptate optio. Eveniet soluta molestiae, non quas labore ipsa obcaecati minima \
-                    repudiandae nisi cumque iusto laboriosam sit nostrum animi quidem fuga nihil reiciendis delectus \
-                    itaque. Voluptas beatae ea odit ipsam dolore, inventore quod, numquam exercitationem neque \
-                    laboriosam molestias cum consequuntur quidem perspiciatis impedit. Non, laborum nulla. \
+                    Con 20 años de experiencia hemos logrado posicionarnos como una empresa líder en la prestación \
+                    de servicios de Transporte de pasajeros. /n \
+                    Somos una empresa líder en la prestación de servicios de Transporte Especial Terrestre de \
+                    Pasajeros, en la línea empresarial. Por largo tiempo les hemos entregado a nuestros clientes \
+                    calidad al viajar, seguridad y comodidad, mediante un servicio cordial, confiable y honesto. \ 
+                    Contamos con conductores donde prima la puntualidad, honestidad y amabilidad; tenemos rutas \
+                    rápidas que cubren la mayor parte de la zona colombiana y le entregamos el mejor servicio \
+                    posible a nuestros clientes. Brindamos la oportunidad de escoger entre todas las comodidades \
+                    variando las rutas y así encontrar el mejor precio que se acomode a su bolsillo. \
                 </p> \
             </div> \
             <div class="container-contact d-flex flex-column"> \
