--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -379,10 +379,12 @@
             <div class="container-text"> \
                 <p> \
                     Con 20 años de experiencia hemos logrado posicionarnos como una empresa líder en la prestación \
-                    de servicios de Transporte de pasajeros. /n \
+                    de servicios de Transporte de pasajeros. \
                     Somos una empresa líder en la prestación de servicios de Transporte Especial Terrestre de \
                     Pasajeros, en la línea empresarial. Por largo tiempo les hemos entregado a nuestros clientes \
-                    calidad al viajar, seguridad y comodidad, mediante un servicio cordial, confiable y honesto. \ 
+                    calidad al viajar, seguridad y comodidad, mediante un servicio cordial, confiable y honesto. \
+                </p> \
+                <p> \
                     Contamos con conductores donde prima la puntualidad, honestidad y amabilidad; tenemos rutas \
                     rápidas que cubren la mayor parte de la zona colombiana y le entregamos el mejor servicio \
                     posible a nuestros clientes. Brindamos la oportunidad de escoger entre todas las comodidades \
@@ -410,7 +412,7 @@
             </div>';
     }
 
-    // showWe();
+    showWe();
 </script>
 
 </html>
