:sparkles: text we in english

--- a/src/views/principal.html
+++ b/src/views/principal.html
@@ -378,17 +378,16 @@
             </div> \
             <div class="container-text"> \
                 <p> \
-                    Con 20 años de experiencia hemos logrado posicionarnos como una empresa líder en la prestación \
-                    de servicios de Transporte de pasajeros. \
-                    Somos una empresa líder en la prestación de servicios de Transporte Especial Terrestre de \
-                    Pasajeros, en la línea empresarial. Por largo tiempo les hemos entregado a nuestros clientes \
-                    calidad al viajar, seguridad y comodidad, mediante un servicio cordial, confiable y honesto. \
+                    With 20 years of experience, we have managed to position ourselves as a leading company in the \
+                    provision of passenger transport services. \
+                    We are a leader in the provision of services of Special Land Passenger Transport, in the business line. \
+                    For a long time, we have delivered quality travel, safety, and comfort to our customers, through friendly, \
+                    reliable, and honest service. \
                 </p> \
                 <p> \
-                    Contamos con conductores donde prima la puntualidad, honestidad y amabilidad; tenemos rutas \
-                    rápidas que cubren la mayor parte de la zona colombiana y le entregamos el mejor servicio \
-                    posible a nuestros clientes. Brindamos la oportunidad de escoger entre todas las comodidades \
-                    variando las rutas y así encontrar el mejor precio que se acomode a su bolsillo. \
+                    We have drivers where punctuality, honesty, and kindness prevail; we have fast routes that cover most of \
+                    the Colombian area and we deliver the best possible service to our customers. We offer the opportunity \
+                    to choose between all the comforts varying the routes and find the best price that suits your pocket. \
                 </p> \
             </div> \
             <div class="container-contact d-flex flex-column"> \
